# jsony

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devsm.toml
crates/benchmark/: Cargo.toml
crates/benchmark/src/: main.rs
crates/derive_tester/: Cargo.toml  coverage.sh
crates/derive_tester/proc-macro2/: Cargo.toml  README.md
crates/derive_tester/proc-macro2/src/: extra.rs  fallback.rs  lib.rs  parse.rs  wrapper.rs
crates/derive_tester/src/: bench.rs  casing.rs  compile.rs  corpus.rs  datagen.rs  diag.rs  emit.rs  features.rs  gen.rs  lib.rs  library.rs  main.rs  run.rs  schema.rs  task.rs
crates/fuzz/: Cargo.toml
crates/fuzz/fuzz_targets/: json_roundtrip.rs
crates/fuzz/src/: main.rs
crates/jsony_bench/: Cargo.toml
crates/jsony_bench/fixture/: self.json
crates/jsony_bench/src/: lib.rs
crates/jsony_config/: Cargo.toml
crates/jsony_macros/: Cargo.toml
crates/jsony_macros/src/: ast.rs  codegen.rs  lib.rs  template.rs
crates/jsony_macros/src/writer/: cache.rs
crates/jsony_macros_source/: Cargo.toml
crates/jsony_macros_source/src/: ast.rs  codegen.rs  context.rs  derive_tests.rs  lib.rs  main.rs  template.rs  util.rs
crates/jsony_macros_source/src/writer/: cache.rs
crates/jsony_value/: Cargo.toml  README.md
crates/jsony_value/benchmark/: Cargo.toml
crates/jsony_value/src/: binary.rs  lib.rs  macros.rs  strings.rs  value_map.rs
crates/jsony_value/src/control/group/: sse2.rs
crates/jsony_value/src/value_map/raw/: mod.rs
crates/jsony_value/tests/: panic_safety.rs
crates/macro_preprocessor/src/: main.rs
examples/: cookbook.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: serde_json_equivalence.rs
fuzz/src/: lib.rs
jsony/: Cargo.toml  README.md
jsony/examples/: cookbook.rs
jsony/src/: __internal.rs  binary.rs  byte_writer.rs  error.rs  helper.rs  json.rs  lazy_parser.rs  lib.rs  parser.rs  strings.rs  text.rs  text_writer.rs  value.rs
jsony/src/json/: tests.rs
jsony/src/text/: form_urlencoded.rs  from_impl.rs
jsony/tests/: attributes.rs  from_json.rs  objects.rs  to_json.rs
jsony_bench/: Cargo.toml
jsony_bench/src/: lib.rs
jsony_config/: Cargo.toml  README.md
jsony_config/src/: lib.rs
jsony_macros/: Cargo.toml
jsony_macros/src/: ast.rs  case.rs  codegen.rs  lib.rs  lit.rs  template.rs  util.rs  writer.rs
jsony_macros/src/writer/: cache.rs
jsony_macros_source/: Cargo.toml
jsony_macros_source/src/: ast.rs  case.rs  codegen.rs  lit.rs  main.rs  template.rs  util.rs  writer.rs
jsony_value/: Cargo.toml  LICENSE-MIT
jsony_value/benchmark/: Cargo.toml
jsony_value/benchmark/src/: main.rs
jsony_value/fuzz/: Cargo.toml
jsony_value/fuzz/examples/: serde_json_equivalence_check.rs
jsony_value/fuzz/fuzz_targets/: binary_roundtrip.rs  serde_json_equivalence.rs
jsony_value/fuzz/src/: lib.rs  main.rs
jsony_value/src/: lib.rs  value_list.rs  value_map.rs
jsony_value/src/value_map/raw/: mod.rs
jsony_value/tests/: basic.rs
macro_preprocessor/: Cargo.toml
macro_preprocessor/src/: main.rs
src/: __internal.rs  binary.rs  byte_writer.rs  helper.rs  json.rs  lazy_parser.rs  lib.rs  parser.rs  rewriter.rs  strings.rs  text.rs  text_writer.rs
src/text/: from_impl.rs
tests/: api_edges.rs  attributes.rs  const_generics.rs  decode_object_sequence.rs  explicit_paths.rs  from_json.rs  leak_audit.rs  objects.rs  soundness.rs  to_json.rs  where_clauses.rs
