[package]
name = "jsony"
version = "0.1.9"
edition = "2024"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/exrok/jsony"
description = "An experimental fast compiling serialization and deserialization libary for JSON like formats."
keywords = ["serialization"]
categories = ["encoding"]
rust-version = "1.85"

[dependencies]
jsony_macros = { version = "0.1.8", optional = true }
itoa = "1"
zmij = "1"
uuid = { version = "1", optional = true }

[features]
default = ["json_comments", "macros"]
uuid = ["dep:uuid"]
macros = ["dep:jsony_macros"]
json_comments = []

[patch.crates-io]
jsony = { path = "." }
jsony_macros = { path = "crates/jsony_macros" }

[workspace]
members = [
    "crates/*",
    "crates/jsony_value/benchmark",
]
resolver = "2"

[profile.release]
debug = 1
