[package]
name = "jsony"
version = "0.0.2"
edition = "2021"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/exrok/jsony"
description = "An experimental fast compiling serialization and deserialization libary for JSON like formats."
keywords = ["serialization"]
categories = ["encoding"]
rust-version = "1.82"

[dependencies]
#jsony_macros = { version = "0.0.2" }
jsony_macros = { path = "../jsony_macros" }
itoa = "1"
ryu = "1"
memchr = "2.7.4"
uuid = { version = "1", optional = true }


[features]
default = []
uuid = ["dep:uuid"]
