[package]
name = "jsony"
version = "0.1.8"
edition = "2021"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/exrok/jsony"
description = "An experimental fast compiling serialization and deserialization libary for JSON like formats."
keywords = ["serialization"]
categories = ["encoding"]
rust-version = "1.84"

[dependencies]
jsony_macros = { version = "0.1.7", optional = true }
itoa = "1"
ryu = "1"
uuid = { version = "1", optional = true }

[features]
default = ["json_comments", "macros"]
uuid = ["dep:uuid"]
macros = ["dep:jsony_macros"]
json_comments = []

#[patch.crates-io]
#jsony_macros = { path = "../jsony_macros" }
