[package]
name = "jsony_config"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/exrok/jsony"
description = "Lenient JSON configuration framework for Rust applications based on jsony."
keywords = ["config", "configuration", "settings", "json"]
categories = ["config"]
rust-version = "1.85"

[dependencies]
jsony = "0.1.6"
kvlog = { version = "0.1", optional = true }

[features]
default = ["kvlog"]
kvlog = ["dep:kvlog"]
