[package]
name = "jsony_macros"
version = "0.0.2"
edition = "2021"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/exrok/jsony"
description = "proc-macro crate for jsony"
rust-version = "1.82"

[dependencies]

[lib]
proc-macro = true
