[package]
name = "jsony_value"
version = "0.0.1"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
description = "A JSON value representation for the jsony crate."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["json", "value"]
categories = ["data-structures", "no-std"]
edition = "2021"
rust-version = "1.65.0"

[dependencies]
foldhash = { version = "0.2", default-features = false }
jsony = "0.1.8"

[features]
default = []
