[package]
name = "jsony_value"
version = "0.0.1"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
description = "A JSON value representation for the jsony crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/exrok/jsony"
readme = "README.md"
keywords = ["json", "value", "serialization"]
categories = ["encoding", "data-structures"]
edition = "2021"
rust-version = "1.84"

[dependencies]
foldhash = { version = "0.2", default-features = false }
jsony = "0.1.9"

[features]
default = []

[workspace]
members = ["benchmark", "fuzz"]

[patch.crates-io]
jsony = { path = "/home/user/Projects/git/jsony/jsony" }
