[package]
name = "derive_tester"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "derive_tester"
path = "src/lib.rs"

[[bin]]
name = "derive_tester"
path = "src/main.rs"

[dependencies]
# Vendored proc-macro2 fork (provides Ident::new_static / owned / Static used by the codegen macros).
proc-macro2 = { path = "./proc-macro2" }
# jsony "0.1" resolves to the local crate via the workspace [patch.crates-io].
jsony = "0.1"
# The derive macro *source*, driven in-process by the `expand` mode so a coverage
# tool can measure which codegen paths the generated types exercise. Crosses the
# boundary only as `&str -> ExpandStats`, so its `proc-macro2` need not match the
# vendored fork above.
jsony_macros_source = { path = "../jsony_macros_source" }
bumpalo = "3.16.0"
rand = { version = "0.8.5", features = ["small_rng"] }
itoa = "1.0"
anyhow = "1.0"
rayon = "1.10"
