[package]
name = "jsony-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
default-run = "jsony-fuzz"

[package.metadata]
cargo-fuzz = true

[dependencies]
jsony = { version = "0.1.9", path = "../.." }
jsony_value = { path = "../jsony_value" }
libfuzzer-sys = "0.4"
serde_json = { version = "1.0", features = [
    "preserve_order",
    "float_roundtrip",
] }


[[bin]]
name = "binary_roundtrip"
path = "fuzz_targets/binary_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_roundtrip"
path = "fuzz_targets/json_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "serde_json_equivalence"
path = "fuzz_targets/serde_json_equivalence.rs"
test = false
doc = false
bench = false
